--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,20 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# Input
+/Input/
+
+# Intermediate script files
+/Script/INTERMEDIATE/
+
+# Intermediate output
+/Intermediate/
+/Temp/
+
+# Communication markdowns
+/Communication/
+
+# Output
+/Output/
+
